<?xml version="1.0"?>
<package format="2">
  <name>slam_v44</name>
  <version>0.1.0</version>
  <description>slam_v44: odom-assisted 2D LaserScan SLAM, occupancy grid mapping, A* navigation, and persistent obstacle visualization for ROS Melodic.</description>

  <maintainer email="user@example.com">slam_v44 maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>

